@@ -607,6 +607,11 @@ Other Changes
 
   Closes #5769
 
+* Fix false positive for ``unused-variable`` for classes inside functions
+  and where a metaclass is provided via a call.
+
+  Closes #4020
+
 * Only raise ``not-callable`` when all the inferred values of a property are not callable.
 
   Closes #5931
