@@ -2806,6 +2806,10 @@ class VariablesChecker(BaseChecker):
             while not isinstance(attr, nodes.Name):
                 attr = attr.expr
             name = attr.name
+        elif isinstance(klass._metaclass, nodes.Call) and isinstance(
+            klass._metaclass.func, nodes.Name
+        ):
+            name = klass._metaclass.func.name
         elif metaclass:
             name = metaclass.root().name
 
